# alfred

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
cli/: alfred.py  ultron.py
daemon/: Dockerfile  go.mod
daemon/cmd/daemon/: main.go
daemon/internal/browser/: browser.go
daemon/internal/client/: prime.go
daemon/internal/computer/: computer.go
daemon/internal/config/: config.go
daemon/internal/emitters/: emitter.go  filewatcher.go  resource.go
daemon/internal/executor/: executor.go  selfmod.go  system.go
daemon/internal/handlers/: builtin.go  registry.go
daemon/internal/primeclient/: client.go
daemon/internal/server/: server.go
daemon/internal/session/: tmux.go
daemon/scripts/: browser.py  computer.py  setup_browser.sh  setup_computer.sh  start_chrome.sh
prime/: .env.example  Dockerfile  requirements.txt
prime/app/: __init__.py  config.py  grpc_client.py  grpc_server.py  main.py
prime/app/api/: daemon.py  telegram.py
prime/app/core/: audit.py  brain.py  event_handler.py  events.py  intent.py  memory.py  orchestrator.py  patterns.py  router.py  workflow.py
prime/app/models/: __init__.py  base.py  machine.py  project.py  task.py
prime/app/services/: chat_history.py  file_transfer.py  message_queue.py  scheduler.py  telegram_poller.py  telegram_service.py  (+1 more)
proto/: daemon.proto
scripts/: generate_proto.sh  test_connection.py  test_setup.py
src/alfred/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_capabilities.py  test_executor.py  test_router.py
(+23 files in other folders)
