[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-prime"
version = "0.1.0"
description = "A persistent AI agent that lives across all your machines"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Alfred Prime Team" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-telegram-bot>=21.0",
    "anthropic>=0.18.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
daemon = [
    "playwright>=1.41.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
alfred-prime = "alfred.prime.main:main"
alfred-daemon = "alfred.daemon.main:main"
alfred-cli = "alfred.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
